--- a/Readme
+++ b/Readme
@@ -2,6 +2,5 @@ Simple IRC relay that connects two irc channels.
 
 To install, install node.js and npm
 
-then 
-				npm install irc
-				npm install https://github.com/pathsny/alfred/tarball/master
+then
+  npm install 
