--- a/Readme
+++ b/Readme
@@ -1,11 +1,16 @@
 Irc bot written in coffeescript
 
 setup instructions
-install node.js
+install node.js and npm
 clone the repo
+
+on the commandline
 npm install
-./scripts/setup
+./bin/setup
 edit data/settings.json and fill in the settings
+
+to run
+./bin/bot
 
 modules sit inside the modules directory
 check the Readme there to create new modules
